--- a/nav.css
+++ b/nav.css
@@ -42,14 +42,11 @@ nav{
 
 #menu i{
     cursor: pointer;
-}
-
-.menu-close-controler{
-    color: white;
+    font-size: 1.5rem;
 }
 
 .menu-controler{
-    color: white;    
+    color: #959595;    
 }
 
 #up{
